WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210475
[css-flexbox] min-height:auto not updated after an image loads when the image has a specified height and width.
https://bugs.webkit.org/show_bug.cgi?id=210475
Summary
[css-flexbox] min-height:auto not updated after an image loads when the image...
Carlos Alberto Lopez Perez
Reported
2020-04-13 21:34:56 PDT
Consider the following test case:
https://codepen.io/cl0p3z/pen/BaoojeE
The tests fails on WebKit as it is, but it will pass if you remove the style="width: 100px; height: 100px;" from the <img> element. This seems to be caused by a similar issue to this one fixed on Chrome:
https://crbug.com/1042329
This its tested by WPT test:
https://wpt.live/css/css-flexbox/image-items-flake-001.html
This test pass both on Firefox on Chrome.
Attachments
Patch
(4.52 KB, patch)
2020-08-17 08:48 PDT
,
Sergio Villar Senin
jfernandez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2020-08-17 08:48:26 PDT
Created
attachment 406718
[details]
Patch
Sergio Villar Senin
Comment 2
2020-08-19 08:45:04 PDT
Committed
r265858
: <
https://trac.webkit.org/changeset/265858
>
Radar WebKit Bug Importer
Comment 3
2020-08-19 08:46:18 PDT
<
rdar://problem/67405575
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug